sd-core/src/language/mlir/snapshots/sd_core__language__mlir__internal__tests__parse_mlir_block-2.snap
---
source: sd-core/src/language/mlir/internal.rs
expression: syntax_tree
---
Block {
    label: BlockLabel {
        id: BlockId(
            "^bb1",
        ),
        args: [],
    },
    operations: [
        Operation {
            result: [],
            operation: GenericOperation {
                op: "cf.br",
                operands: [
                    Value {
                        id: "%arg0",
                        index: None,
                    },
                ],
                successors: [
                    Successor {
                        id: "^bb3",
                        args: [],
                    },
                ],
                properties: [],
                regions: [],
                attributes: [],
                function_type: "(i64) -> ()",
            },
            location: None,
        },
    ],
}
