sd-core/src/language/mlir/snapshots/sd_core__language__mlir__internal__tests__parse_mlir_block-4.snap
---
source: sd-core/src/language/mlir/internal.rs
expression: syntax_tree
---
Block {
    label: BlockLabel {
        id: BlockId(
            "^bb3",
        ),
        args: [
            TypedArg {
                id: "%1",
                type: "i64",
            },
        ],
    },
    operations: [
        Operation {
            result: [],
            operation: GenericOperation {
                op: "cf.br",
                operands: [
                    Value {
                        id: "%1",
                        index: None,
                    },
                    Value {
                        id: "%arg0",
                        index: None,
                    },
                ],
                successors: [
                    Successor {
                        id: "^bb4",
                        args: [],
                    },
                ],
                properties: [],
                regions: [],
                attributes: [],
                function_type: "(i64, i64) -> ()",
            },
            location: None,
        },
    ],
}
