sd-core/src/language/mlir/snapshots/sd_core__language__mlir__internal__tests__parse_mlir_operation-2.snap
---
source: sd-core/src/language/mlir/internal.rs
expression: syntax_tree
---
Operation {
    result: [
        OpResult {
            id: "%foo",
            index: None,
        },
        OpResult {
            id: "%bar",
            index: None,
        },
    ],
    operation: GenericOperation {
        op: "\"foo_div\"",
        operands: [],
        successors: [],
        properties: [],
        regions: [],
        attributes: [],
        function_type: "() -> (f32, i32)",
    },
    location: None,
}
